--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delhice</title>
-    <link rel="icon" href="https://ugc.production.linktr.ee/Ah7Bu3bQGygqwhQ9YNSz_IMG_8534.PNG" type="image/png" />
-  <style>
-    .logo-circle {
-      width: 120px;
-      height: 120px;
-      border-radius: 40%;
-      object-fit: cover;
-    }
-  </style>
+    <link rel="icon" href="/favicon.png" type="image/png" />
     <link href="main.css" rel="stylesheet">
   </head>
   <script>
@@ -22,7 +14,6 @@
   </script>
   <body>
     <div id="app"></div>
-    <img src="https://ugc.production.linktr.ee/Ah7Bu3bQGygqwhQ9YNSz_IMG_8534.PNG" alt="Logo" class="logo-circle" />
     <script src="main.js"></script>
   </body>
 </html>
