--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delhice</title>
-    <link rel="icon" href="/favicon.png" type="image/png" />
-    <link href="main.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="main.css">
+    <title>Delhice by Sanya Singh | Cakes, Cookies & More</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="96x96">
+    <link rel="icon" href="/logo.png" type="image/png" sizes="96x96">
   </head>
   <script>
     new EventSource('/esbuild').addEventListener('change', () =>
