--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
   <body>
     <div id="app"></div>
     <script src="main.js"></script>
+    <!-- Chat button -->
+    <div id="chat-container">
+      <div id="chat-messages"></div>
+      <input type="text" id="chat-input" placeholder="Ask me something..." />
+    </div>
+
+    <button id="chat-toggle">💬</button>
+
+    <script src="chatbot.js"></script>
+    <link rel="stylesheet" href="main.css">  
   </body>
 </html>
