--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Delhice by Sanya Singh | Cakes, Cookies & More</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="96x96" />
     <link rel="icon" href="/logo.png" type="image/png" sizes="96x96" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="src/shadcn.css" />
   </head>
 
   <script>
