--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <button id="chat-toggle">💬</button>
 
     <!-- Chatbot script -->
-    <script src="chatbot.js"></script>
+    <script src="src/chatbot.js"></script>
   </body>
 </html>
