--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <button id="chat-toggle">💬</button>
 
     <!-- Chatbot script -->
-    <script src="src/shadcn.css"></script> 
+    <script src="main.css"></script> 
     <script src="src/chatbot.js"></script>
   </body>
 </html>
