--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Delhice by Sanya Singh | Cakes, Cookies & More</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="96x96" />
     <link rel="icon" href="/logo.png" type="image/png" sizes="96x96" />
-    <link rel="stylesheet" href="src/shadcn.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <script>
@@ -17,7 +17,6 @@
   <body>
     <div id="app"></div>
     <script src="main.js"></script>
-    <script src="main.css"></script>
 
     <!-- Chatbot UI -->
     <div id="chat-container" style="display: none;">
@@ -27,7 +26,7 @@
 
     <button id="chat-toggle">💬</button>
 
-    <!-- Chatbot script --> 
+    <!-- Chatbot script -->
     <script src="src/chatbot.js"></script>
   </body>
 </html>
