--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
     <div id="app"></div>
     <script src="main.js"></script>
 
-    <!-- Chatbot UI -->
+    <!-- Enhanced Chatbot UI -->
     <div id="chatbot-container">
       <button id="chat-toggle" title="Chat with us">💬</button>
       <div id="chat-window">
+        <div class="chat-header">
+          Delhice Assistant
+        </div>
         <div id="chat-messages"></div>
-        <input type="text" id="chat-input" placeholder="Ask me something..." />
+        <div class="chat-input-area">
+          <input type="text" id="chat-input" placeholder="Ask me about our delicious treats..." />
+        </div>
       </div>
     </div>
 
