--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Delhice by Sanya Singh | Cakes, Cookies & More</title>
     <link rel="icon" href="/logo.png" type="image/png" />
-    <link rel="stylesheet" href="main.css" />
+    <link href="main.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
